<resources>
    <string name="app_name">HW07_ForumFirebaseGoogleMaps</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_post">Create Post</string>
    <string name="logout">Logout</string>
    <string name="textview">TextView</string>
    <string name="NewForum">New Forum</string>
    <string name="Forums">Forums</string>
    <string name="CreateNewAccount">Create New Account</string>
    <string name="Login">Login</string>
    <string name="forum_title">Forum Title</string>
    <string name="forum_description">Forum Description</string>
    <string name="google_maps_key">AIzaSyBpT04lF_RHZ4eCVnWXaXJm6YrjuDDeYg4</string>

    <string name="full_name">Full Name</string>
    <string name="enter_password">Enter Password</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="enter_email">Enter Email</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="create_new_account">Create New Account</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="new_jog">New Jog</string>
    <string name="previous_jog_history">Previous Jog History</string>

    <string name="end_jog">End Jog</string>
    <string name="JogHistoryRuns">Jog History Runs</string>
    <string name="JogTracking">Jog Tracking</string>

</resources>